--- a/src/ChessGameDDD.ApplicationLayer/ChessGameDDD.ApplicationLayer.csproj
+++ b/src/ChessGameDDD.ApplicationLayer/ChessGameDDD.ApplicationLayer.csproj
@@ -7,4 +7,8 @@
   <ItemGroup>
     <ProjectReference Include="..\ChessGameDDD.Domain\ChessGameDDD.Domain.csproj" />
   </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Include="Polly" Version="8.4.1" />
+  </ItemGroup>
 </Project>
